<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/subject_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_et_bg"
                android:hint="@string/create_subject_hint"
                android:maxLength="50"
                android:padding="4dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/common_et_bg"
                android:gravity="left|top"
                android:hint="@string/create_content_hint"
                android:lines="10"
                android:maxLength="200"
                android:maxLines="10"
                android:padding="4dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_max_text" />

                <TextView
                    android:id="@+id/max_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_et_bg"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:text="1"/>

            </LinearLayout>

            <com.love_cookies.vote.View.Wedget.XKListView
                android:id="@+id/column_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:divider="@null"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_column_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/create_add_column"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
